# University_ZPG

./: .gitignore  .gitmodules  compile_glew.sh
Labs/: .gitignore  Labs.code-workspace  VS-CMakeLists-Template.txt
Labs/Lab_01/: CMakeLists.txt  Lab_01.cpp  Lab_01.sln  Lab_01.vcxproj  main.cpp
Labs/Lab_02/: Application.cpp  Application.h  CMakeLists.txt  Lab_02.sln  Lab_02.vcxproj  Lab_02.vcxproj.filters  Rectangle.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderCollection.cpp  ShaderCollection.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  Shape.h  ShapeCollection.h  ShapeFactory.cpp  VAO.cpp  VAO.h  VBO.cpp  VBO.h  main.cpp
Labs/Lab_03/: Application.cpp  Application.h  CMakeLists.txt  DrawableObject.cpp  DrawableObject.h  DrawableObjectFactory.cpp  DrawableObjectFactory.h  ICursorCallbackListener.h  IKeyCallbackListener.h  Lab_03.sln  Lab_03.vcxproj  Lab_03.vcxproj.filters  Model.cpp  Model.h  MovingObject.cpp  MovingObject.h  Rectangle.cpp  Rectangle.h  Renderer.cpp  Renderer.h  Rotation.cpp  Rotation.h  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Shape.cpp  Shape.h  ShapeFactory.cpp  ShapeFactory.h  TransformComposite.cpp  TransformGeneric.cpp  TransformModel.cpp  TransformModel.h  TransformRotate.cpp  TransformRotate.h  TransformRotateContinuous.cpp  TransformRotateContinuous.h  TransformRotateSimple.cpp  TransformScale.cpp  TransformScale.h  (+4 more)
Labs/Lab_04/: Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  DrawableObjectFactory.cpp  DrawableObjectFactory.h  ICursorCallbackObserver.h  IKeyCallbackObserver.h  IViewMatrixChangedObserver.h  Lab_04.sln  Lab_04.vcxproj  Lab_04.vcxproj.filters  ModelFactory.h  ModelManager.cpp  ModelManager.h  MovingObject.cpp  MovingObject.h  ObservedSubjectHelper.h  Renderer.cpp  Renderer.h  ShaderManager.cpp  ShaderProgram.cpp  ShaderProgram.h  TransformComposite.cpp  TransformGeneric.h  TransformRotate.h  TransformRotateContinuous.cpp  TransformRotateContinuous.h  TransformRotateSimple.cpp  TransformTranslate.cpp  suzi_flat.h  suzi_smooth.h
Labs/Lab_05/: Application.cpp  Application.h  Camera.cpp  Camera.h  DrawableObject.cpp  DrawableObjectFactory.cpp  DrawableObjectFactory.h  IKeyCallbackObserver.h  IViewMatrixChangedObserver.h  Lab_05.sln  Lab_05.vcxproj  Lab_05.vcxproj.filters  Light.cpp  Light.h  Manager.h  ModelManager.cpp  Renderer.cpp  Renderer.h  SceneLoader.cpp  ShaderProgram.cpp  ShaderProgram.h  Transform.h  TransformModel.h  TransformRotate.cpp  TransformRotateContinuous.cpp  TransformScale.cpp  frag_light_phong.frag  main.cpp  sphere.h
Labs/Lab_05/shaders/: frag_colorConst.frag  frag_colorFromIn3_grey.frag  frag_light.frag  frag_light_lambert.frag  frag_light_phong.frag  vert_light.vert
Labs/Lab_Project/: .gitignore  Application.cpp  Application.h  CMakeLists.txt  Camera.cpp  Camera.h  CubeMapImageMap.cpp  CubeMapImageMap.h  CubeMapPos.h  CubeMapTexture.cpp  CubeMapTexture.h  DrawableObject.cpp  DrawableObject.h  DrawableObjectFactory.cpp  DrawableObjectFactory.h  Helper.cpp  Helper.h  IMouseButtonObserver.h  IViewPortChangedObserver.h  Light.cpp  Light.h  LightStruct.h  Material.cpp  Material.h  MaterialSetFlag.h  ModelFactory.cpp  ModelFactory.h  ModelManager.cpp  MovingObject.h  ObjectProperties.h  OrbittingObject.cpp  OrbittingObject.h  Renderer.cpp  Renderer.h  Rotation.cpp  SceneLoader.cpp  SceneLoader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  (+26 more)
Labs/Lab_Project/Curves/: BezierCubic.cpp  BezierCubic.h  BezierCurve.cpp  BezierCurve.h  BezierOverflowBehaviour.h  CurveOverflowBehaviour.h  Line.cpp  Line.h
Labs/Lab_Project/Events/: CameraEventData.h  CursorEventData.h  Event.h  EventData.h  EventType.h  FrameEventData.h  KeyEventData.h  LightCountEventData.h  LightEventData.h  MatrixEventData.h  MouseButtonEventData.h  ViewPortChangedEventData.h
Labs/Lab_Project/Interfaces/: ICursorCallbackObserver.h  ICurve.h  IFrameObserver.h  ILightObserver.h  IObserver.h  IProjectionMatrixChangedObserver.h  ITransform.h  ITransformContinuousable.h
Labs/Lab_Project/Lights/: Light.cpp  Light.h  LightDirectional.cpp  LightDirectional.h  LightPoint.cpp  LightPoint.h  LightSpot.cpp  LightSpot.h  LightStruct.h
Labs/Lab_Project/Model/: HeaderModelDefinition.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  ModelFormat.h  ModelLoader.cpp  ModelLoader.h  ModelManager.cpp  ModelManager.h  Vertex.h  VertexCollection.cpp  VertexCollection.h
Labs/Lab_Project/Model/Models/: plain.h
Labs/Lab_Project/Models/: models.h  skycube.h
Labs/Lab_Project/Shader/: FragmentShader.h  Shader.cpp  ShaderLoader.h  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h
Labs/Lab_Project/Shaders/: common.glsl  frag_colorConst.frag  frag_colorFromIn3.frag  frag_colorFromIn3_grey.frag  frag_colorFromIn4.frag  frag_light_blinn.frag  frag_light_const.frag  frag_light_lambert.frag  frag_light_phong.frag  frag_skybox.frag  frag_texture.frag  frag_texture_blinn.frag  frag_texture_lambert.frag  vert_default_colorPass3.vert  vert_default_colorPass4.vert  vert_light.vert  vert_skybox.vert  vert_texture.vert  vert_texture_light.vert
Labs/Lab_Project/Texture/: CubeMapImageMap.cpp  CubeMapImageMap.h  CubeMapTexture.cpp  Texture.cpp  Texture.h
Labs/Lab_Project/Transforms/: Transform.h  TransformCameraFollow.cpp  TransformCameraFollow.h  TransformCompositeContinuousable.cpp  TransformCompositeContinuousable.h  TransformContinuous.cpp  TransformContinuous.h  TransformRotate.cpp  TransformRotate.h  TransformRotateAround.cpp  TransformRotateAround.h  TransformRotateContinuous.cpp  TransformRotateContinuous.h  TransformRotateSimple.cpp  TransformRotateSimple.h  TransformScale.cpp  TransformScale.h  TransformTranslate.cpp  TransformTranslate.h  TransformTranslateBezier.cpp  TransformTranslateBezier.h  TransformTranslateCurve.cpp  TransformTranslateCurve.h
Labs/Lab_Project/shaders/: frag_colorFromIn4.frag  frag_light_blinn.frag  frag_light_lambert.frag
Labs/VSCode-Templates/: c_cpp_properties.json
Libraries/: .gitignore
Libraries-src/: compile_glew.sh
Libraries/glew/: .gitignore
Libraries/soil/lib/: SOIL.lib
